# ragappusingbedrockandlangchain

./: app.py  pyproject.toml
