[tool.poetry]
name = "satyamdas03"
version = "0.1.0"
description = ""
authors = ["satyamdas03 <116027621+satyamdas03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.33"
awscli = "^1.34.33"
pypdf = "^5.0.1"
langchain = "^0.3.2"
streamlit = "^1.39.0"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
